--- a/taocan/src/style/main.css
+++ b/taocan/src/style/main.css
@@ -28,7 +28,7 @@
 
 .pack_setting .el-tabs{margin:0 25px;}
 .ivu-table table{width:100%;}
-.ivu-table table tr th,.ivu-table table tr td{text-align: center;line-height: 22px;}
+.ivu-table table tr th,.ivu-table table tr td{text-align: center;line-height: 22px;padding:0 4px;word-break: break-all;}
 .ivu-table i{font-size: 24px;margin-left: 0;vertical-align: middle;}
 .ivu-table table tr th i{font-size: 14px;vertical-align: middle;margin-left: 5px;}
 
@@ -74,6 +74,32 @@
 .channel_setting .ivu-table-body .ivu-icon-checkmark-round{color: green;font-size: 14px;}
 .channel_setting .ivu-table-body .edit_div .ivu-icon-close-round{color: red;font-size: 14px;}
 .recommend{color: #f90}
+
+.sort_table{cursor: all-scroll;}
+.channel_setting table tr td{padding:0 4px;}
+.channel_setting table tr td .ivu-input{width: 100%;}
+
+.my_input{ display: inline-block;width: auto;height: 32px;line-height: 1.5;padding: 4px 7px;font-size: 12px;border: 1px solid #dddee1;border-radius: 4px;color: #495060; background-color: #fff; background-image: none;position: relative;cursor: text; transition: border .2s ease-in-out,background .2s ease-in-out,box-shadow .2s ease-in-out;}
+.my_input:hover{border-color: #57a3f3;}
+.my_input:focus{border-color: #57a3f3; outline: 0; box-shadow: 0 0 0 2px rgba(45,140,240,.2);}
+.my_submit{color: #495060;font-size: 24px;vertical-align: middle;background: none;border:none;cursor: pointer;}
+.my_submit:focus{border: none;outline: 0;}
+.my_btn{color: #fff;background-color: #2d8cf0;border-color: #2d8cf0;display: inline-block;margin-bottom: 0;font-weight: 400;text-align: center;vertical-align: middle; -ms-touch-action: manipulation; touch-action: manipulation; cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;line-height: 1.5; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; padding: 6px 15px;font-size: 12px;border-radius: 4px;transition: color .2s linear,background-color .2s linear,border .2s linear;}
+.my_btn:focus{outline: 0;}
+.more_info .my_input{width: 100%;}
+.ivu-table table tr td .my_input{width: 100%;}
+
+.tijiao_btn{    position: absolute;    right: 0;    bottom: -46px;}
+
+
+
+
+
+
+
+
+
+
 
 
 
